[gd_scene format=3 uid="uid://b1pa6rj3u6hpy"]

[ext_resource type="Script" uid="uid://dd4kgp2surd3t" path="res://Scripts/area_recolte_poisson.gd" id="1_y702m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mm8tq"]
size = Vector2(261, 377.875)

[sub_resource type="LabelSettings" id="LabelSettings_y702m"]
font_size = 30
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.60784316)

[node name="Poissons" type="Node2D" unique_id=1543984182]

[node name="AreaRecoltePoisson" type="Area2D" parent="." unique_id=291034728]
script = ExtResource("1_y702m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaRecoltePoisson" unique_id=1033032740]
position = Vector2(16.5, -5.0625)
shape = SubResource("RectangleShape2D_mm8tq")

[node name="SpawnTimer" type="Timer" parent="AreaRecoltePoisson" unique_id=1289086720]
one_shot = true

[node name="DisponibleTimer" type="Timer" parent="AreaRecoltePoisson" unique_id=1915119628]
one_shot = true

[node name="poisson_label" type="Label" parent="." unique_id=850406979]
offset_left = -30.0
offset_top = -124.0
offset_right = 383.0
offset_bottom = 155.0
text = "Appuie sur E pour attraper les poissons quand tu les voient"
label_settings = SubResource("LabelSettings_y702m")
autowrap_mode = 2

[connection signal="area_exited" from="AreaRecoltePoisson" to="AreaRecoltePoisson" method="_on_area_exited"]
[connection signal="body_entered" from="AreaRecoltePoisson" to="AreaRecoltePoisson" method="_on_body_entered"]
[connection signal="body_exited" from="AreaRecoltePoisson" to="AreaRecoltePoisson" method="_on_body_exited"]
[connection signal="timeout" from="AreaRecoltePoisson/SpawnTimer" to="AreaRecoltePoisson" method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="AreaRecoltePoisson/DisponibleTimer" to="AreaRecoltePoisson" method="_on_disponible_timer_timeout"]
